<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/itemGroup">
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/announcements_icon_black"
            android:checkable="true"
            android:title="@string/title_activity_announcements" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar_icon_black"
            android:checkable="false"
            android:title="@string/title_activity_calendar" />
        <item
            android:id="@+id/nav_lunch_menu"
            android:icon="@drawable/lunch_menu_black"
            android:checkable="true"
            android:title="@string/title_activity_lunch_menu"/>
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/sports_icon_black"
            android:checkable="true"
            android:title="@string/title_activity_temp_sports"/>
        <item
            android:id="@+id/nav_bell_schedule"
            android:icon="@drawable/schedule_black"
            android:checkable="true"
            android:title="@string/title_activity_schedule"/>
    </group>
</menu>